# fibresem

./: .gitignore  LICENSE  README.md  batchcrop.py  fibresem.py  readmeta.py  readtags.py  setup.cfg  test.tif  test2-2.tif  test2.tif
fibresem/: __init__.py  scripts.py
fibresem/analysis/: fibreanalysis.py  matlabenginehandler.py
fibresem/analysis/matlab/: semCrop.m
fibresem/core/: fibresem.py
fibresem/io/: readtif.py
lib/: fibreanalysis.py  matlabenginehandler.py  readtif.py  segment.py  simpoly.m
lib/matlab/: showMaskAsOverlay.m  simpoly.m
matplotlib_scalebar/: dimension.py  scalebar.py
quanfima/: morphology.py  utils.py  visualization.py
sampledata/: sample.01_img08.tif  sample.02_img20.tif
src/: requirements.txt
src/fibresem/: __main__.py  scripts.py
src/fibresem/addons/: renamer.py
src/fibresem/analysis/: analysis_engines.py  fibreanalysis.py  matlabenginehandler.py
src/fibresem/analysis/matlab/: simpoly.m  togglefig.m
src/fibresem/analysis/pysimpoly/: external.py  mlsimpoly.m  pysimpoly.py  readtif.py
src/fibresem/core/: config.py  fibresem.py
src/fibresem/helper/: clickhelp.py
src/fibresem/io/: readtif.py
src/fibresem/matplotlib_scalebar/: _version.py  scalebar.py
