[metadata]
name = fibresem
version = 0.0.4
author = Dmitri Visser
author_email = dmitri95dwt@gmail.com
description = A small package to automate the SEM analysis of fibrous meshes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dvtxc/fibresem
project_urls =
    Documentation = https://github.com/dvtxc/fibresem
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    imagecodecs>=2022.2.22
    lxml>=4.8.0
    matplotlib>=3.5.1
    numpy>=1.22.2
    pandas>=1.4.1
    pytest>=7.1.1
    scipy>=1.8.0
    click>=8.0.0

[options.packages.find]
where = src
